fix: use gap-x-6 for lg resolution

--- a/apps/website/src/app/styles/_grid.scss
+++ b/apps/website/src/app/styles/_grid.scss
@@ -4,14 +4,14 @@
   grid-cols-4
   gap-x-4
   md:grid-cols-12
-  md:gap-x-4
-  lg:grid-cols-12
-  lg:gap-x-8
+  lg:gap-x-6
+  xl:gap-x-8
 }
 
 .roots-gap {
   @apply
   grid
-  gap-x-4
-  lg:gap-x-8
+  gap-4
+  lg:gap-6
+  xl:gap-8
 }
